# IncomUdon

./: .gitignore  CMakeLists.txt  LICENSE  THIRD_PARTY_NOTICES.md  android_release.keystore  main.cpp
.github/workflows/: build-native.yml
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
android/src/com/example/incomudon/: IncomUdonActivity.java  IncomUdonKeepAliveService.java
android/src/com/friedoudon/incomudon/: IncomUdonActivity.java  IncomUdonKeepAliveService.java
assets/sfx/: README.md
audio/: AudioBuffer.cpp  AudioBuffer.h  AudioInput.cpp  AudioInput.h  AudioOutput.cpp  AudioOutput.h  AudioResampler.cpp  AudioResampler.h
codec/: Codec2Wrapper.cpp  Codec2Wrapper.h
core/: AndroidPttBridge.cpp  AndroidPttBridge.h  AppState.cpp  AppState.h  ChannelManager.cpp  ChannelManager.h  CryptoUtils.cpp  CryptoUtils.h  LicenseProvider.cpp  LicenseProvider.h  PttController.cpp  PttController.h
crypto/: AeadCipher.cpp  AeadCipher.h  KeyExchange.cpp  KeyExchange.h
i18n/: incomudon_ja.ts
ios/: Info.plist
net/: Fec.cpp  Fec.h  JitterBuffer.cpp  JitterBuffer.h  Packetizer.cpp  Packetizer.h  packet.cpp  packet.h  test_packet.cpp  udptransport.cpp  udptransport.h
scripts/: build_codec2_android.ps1  build_codec2_android.sh
ui/: Main.qml
